<resources>
    <string name="app_name">Food Recipes</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorites</string>
    <string name="favorite_recipes">Favorites Recipes</string>
    <string name="joke">Joke</string>
    <string name="food_joke">Food Joke</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="description">Description</string>
    <string name="not_connected_to_internet">Not Connected To Internet.</string>
    <string name="connection_timeout">Connection Timeout, Please Try After Sometimes.</string>
    <string name="try_after_sometimes">Try After Sometimes.</string>
    <string name="no_recipes_found">No Recipes Found.</string>
    <string name="no_favorite_recipes_found">No Favorite Recipes Found.</string>
    <string name="meal_type">Meal Type</string>
    <string name="diet_type">Diet Type</string>
    <string name="main_course">Main Course</string>
    <string name="breakfast">BreakFast</string>
    <string name="snack">Snack</string>
    <string name="side_dish">Side Dish</string>
    <string name="salad">Salad</string>
    <string name="beverages">Beverage</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="drink">Drink</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="apply">Apply</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="quantity">Quantity</string>
    <string name="solid">Solid</string>
    <string name="savedRecipes">Save Reciepes</string>
    <string name="recipe_saved">Recipe Saved.</string>
    <string name="recipe_removed">Recipe Removed.</string>
    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="delete_recipe">Delete Favorite Recipe</string>
    <string name="delete_all_favorite_recipes">Delete All</string>
    <string name="all_recipes_removed">All recipes removed.</string>
    <string name="theres_no_favorite_recipes">There\'s No Favorite Recipes.</string>
    <string name="share">Share Food Joke</string>
    <string name="shareRecipe">Share Recipe</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="your_web_client_id">322001331106-q6v2mjhapk2tc3tjo1rspaf1ghpp02ta.apps.googleusercontent.com</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="personalized_recipe_discovery">Personalized recipe discovery</string>
    <string name="tell_us_your_food_preferences_and_we_ll_only_serve_you_delicious_rec_pes_ideas">Tell us your food preferences and we\'ll only serve you delicious recípes ideas</string>
</resources>